<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">


    <LinearLayout
        android:id="@+id/laoyout_back"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#2196F3"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BMI Analyzer"
            android:textColor="@color/white"
            android:textSize="25sp"></TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/laoyout_back"
        android:orientation="vertical"
        android:paddingTop="20dp">


        <TextView
            android:id="@+id/welcome_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="arial"
            android:lineSpacingExtra="10dp"
            android:text="@string/hi"
            android:textAlignment="center"
            android:textColor="#4A4848"
            android:textFontWeight="700"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="arial"
            android:text="@string/current_status"
            android:textColor="@color/b_cyan"
            android:textFontWeight="700"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/shape_ed"
            android:hint="Normal (stil Good)"
            android:textAlignment="center"
            android:typeface="normal" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="arial"
            android:text="@string/old_status"
            android:textColor="@color/b_cyan"
            android:textFontWeight="700"
            android:textSize="20dp" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_logo"
        android:orientation="vertical"
        android:paddingLeft="20dp"

        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/records_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="45dp"
        android:background="@color/b_cyan"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/laoyout_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_item"
        android:orientation="horizontal"
        android:paddingLeft="20dp"

        >


        <Button
            android:id="@+id/add_food"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_below="@id/layout_length"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#2196F3"
            android:onClick="addFood"

            android:text="@string/add_food"
            android:textAllCaps="false"
            android:textSize="25dp"></Button>

        <Button
            android:id="@+id/add_record"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_below="@id/layout_length"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#2196F3"
            android:text="@string/add_record"
            android:onClick="addRecord"

            android:textAllCaps="false"
            android:textSize="25dp"></Button>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_logo"
        android:orientation="vertical"
        android:paddingLeft="20dp"

        >

        <Button
            android:id="@+id/view_food"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="300dp"
            android:backgroundTint="#2196F3"
            android:onClick="view_food"
            android:text="@string/view_food"

            android:textAllCaps="false"
            android:textSize="25dp"></Button>

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="arial"
            android:onClick="logout"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="15sp" />

        <TextView
            android:layout_width="45dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/black" />

    </LinearLayout>




</RelativeLayout >