<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FoodList">

    <LinearLayout
        android:id="@+id/laoyout_back"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#2196F3"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BMI Analyzer"
            android:textColor="@color/white"
            android:textSize="25sp"></TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_logo"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/laoyout_back"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <TextView

            android:id="@+id/changefood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:fontFamily="sans-serif"
            android:text="Food List"
            android:textColor="#2196F3"
            android:textSize="30dp"
            android:textStyle="">

        </TextView>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_salmon"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/layout_logo"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/foodItems_img"
            android:layout_width="100dp"
            android:layout_height="98dp"
            android:background="@drawable/shape_ed"
            android:src="@drawable/salmon" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:background="@drawable/shape_ed"
            android:columnCount="2"
            android:rowCount="3">

            <TextView
                android:id="@+id/foodItems_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/salmon"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/foodItems_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="1"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/b_cyan"
                android:text="@string/edit_button"
                android:onClick="update"

                android:textAllCaps="false"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/foodItems_tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnSpan="2"
                android:layout_columnWeight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="-5dp"
                android:text="@string/fish"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/foodItems_tv_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="10dp"
                android:text="@string/calories_cal_g"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/foodItems_img_delete"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_columnSpan="1"
                android:layout_gravity="right"
                android:layout_margin="1dp"
                android:background="@color/b_cyan"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_baseline_close_24" />

        </GridLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_rice"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/layout_salmon"
        android:orientation="horizontal"
        android:layout_margin="5dp">


        <ImageView

            android:layout_width="100dp"
            android:layout_height="98dp"
            android:src="@drawable/rice"
            android:background="@drawable/shape_ed"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:columnCount="2"
            android:rowCount="3"
            android:background="@drawable/shape_ed">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rice"
                android:gravity="center_vertical"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginLeft="10dp"/>

            <Button

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_button"
                android:textSize="20dp"
                android:textStyle="bold"
                android:backgroundTint="@color/b_cyan"
                android:textAllCaps="false"
                android:layout_columnSpan="1"
                android:layout_marginRight="10dp"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carbohydrate"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_columnSpan="2"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="-5dp"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories_cal_g"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginLeft="10dp"/>

            <ImageView

                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_baseline_close_24"
                android:clickable="true"
                android:focusable="true"
                android:background="@color/b_cyan"
                android:layout_columnSpan="1"
                android:layout_gravity="right"
                android:layout_margin="1dp"/>

        </GridLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_banana"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/layout_rice"
        android:orientation="horizontal"
        android:layout_margin="5dp">


        <ImageView

            android:layout_width="100dp"
            android:layout_height="98dp"
            android:src="@drawable/banana"
            android:background="@drawable/shape_ed"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:columnCount="2"
            android:rowCount="3"
            android:background="@drawable/shape_ed">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/banana"
                android:gravity="center_vertical"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginLeft="10dp"/>

            <Button

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_button"
                android:textSize="20dp"
                android:textStyle="bold"
                android:backgroundTint="@color/b_cyan"
                android:textAllCaps="false"
                android:layout_columnSpan="1"
                android:layout_marginRight="10dp"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fruit"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_columnSpan="2"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="-5dp"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories_cal_g"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginLeft="10dp"/>

            <ImageView

                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_baseline_close_24"
                android:clickable="true"
                android:focusable="true"
                android:background="@color/b_cyan"
                android:layout_columnSpan="1"
                android:layout_gravity="right"
                android:layout_margin="1dp"/>

        </GridLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_apple"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/layout_banana"
        android:orientation="horizontal"
        android:layout_margin="5dp">


        <ImageView

            android:layout_width="100dp"
            android:layout_height="98dp"
            android:src="@drawable/apple"
            android:background="@drawable/shape_ed"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:columnCount="2"
            android:rowCount="3"
            android:background="@drawable/shape_ed">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apple"
                android:gravity="center_vertical"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginLeft="10dp"/>

            <Button

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_button"
                android:textSize="20dp"
                android:textStyle="bold"
                android:backgroundTint="@color/b_cyan"
                android:textAllCaps="false"
                android:layout_columnSpan="1"
                android:layout_marginRight="10dp"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fruit"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_columnSpan="2"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="-5dp"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories_cal_g"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginLeft="10dp"/>

            <ImageView

                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_baseline_close_24"
                android:clickable="true"
                android:focusable="true"
                android:background="@color/b_cyan"
                android:layout_columnSpan="1"
                android:layout_gravity="right"
                android:layout_margin="1dp"/>

        </GridLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_orange"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/layout_apple"
        android:orientation="horizontal"
        android:layout_margin="5dp">


        <ImageView

            android:layout_width="100dp"
            android:layout_height="98dp"
            android:src="@drawable/orange"
            android:background="@drawable/shape_ed"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:columnCount="2"
            android:rowCount="3"
            android:background="@drawable/shape_ed">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orange"
                android:gravity="center_vertical"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginLeft="10dp"/>

            <Button

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_button"
                android:textSize="20dp"
                android:textStyle="bold"
                android:backgroundTint="@color/b_cyan"
                android:textAllCaps="false"
                android:layout_columnSpan="1"
                android:layout_marginRight="10dp"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fruit"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_columnSpan="2"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="-5dp"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories_cal_g"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginLeft="10dp"/>

            <ImageView

                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_baseline_close_24"
                android:clickable="true"
                android:focusable="true"
                android:background="@color/b_cyan"
                android:layout_columnSpan="1"
                android:layout_gravity="right"
                android:layout_margin="1dp"/>

        </GridLayout>

    </LinearLayout>
</RelativeLayout>